GARPDev-salesforce/eclipse/GARPDev/src/objects/Candidate_Requirement__c.object
<CustomObject>
    <description>Requirements records to manage a candidate&apos;s program progress</description>
    <fields>
        <fullName>Candidate_Commitment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate Commitment</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Candidate Requirements</relationshipLabel>
        <relationshipName>Candidate_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Completion__c</fullName>
        <description>This field is used to store the date the candidate sat for the exam that he subsequently passed to satisfy this requirement.  Needed for workflow that sets the contract start date for FRM candidates.</description>
        <label>Date of Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready For Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Candidate Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Candidate Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>